# garden-backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  scope.json
app/: docker_token.py  (+12 more)
garden-backend-service/: .flake8  .postgres.env  .safety-policy.yml  Dockerfile  README.md  alembic.ini  api-entrypoint.sh  compose.yaml  pyproject.toml  run-dev-server.sh
garden-backend-service/mdf_migration/: mdf_migration_script.py
garden-backend-service/migrations/: README.md  env.py
garden-backend-service/migrations/versions/: 07a32efd0e27_do_not_duplicate_owner_information_from_.py  0bf4afea3e94_missing_fields_on_related_metadata.py  11833f8cea54_simplify_entrypoint_schema.py  13a336b678b0_add_failedsearchindexsync.py  13f5b2df7caf_add_is_archived_fields.py  21e1daef4f84_add_gardens_table_and_gardens_.py  270b5e065306_drop_datasets_source_id_and_version.py  2f4ff0f6c36e_try_adding_a_modal_app_id_field_to_.py  3420eb0c0c7d_create_mdf_datasets_table.py  3a7478813c63_failed_search_index_updates.py  40c327013756_link_gardens_to_modal_functions.py  45e790abe515_add_additional_fields_to_modal_app_model.py  46832a4335a5_create_users_table.py  499a9bc9101f_add_modal_invocations_table.py  4a66b5ba6cdd_modal_functions_have_function_names_not_.py  4b5beed10eae_add_entrypoint_aliases_json_column.py  61fd40ead01a_make_doi_optional_for_modal_functions.py  620594160543_add_relations_for_skills_domains_.py  6376a7299ad5_dataset_doi_optional.py  7313b5d89c08_remove_contributors_field_from_modal_.py  76548c7e420c_tweak_modal_model_fields.py  79072b7ef5d4_create_pending_mdf_flows_table.py  7e91f264a044_add_function_call_id_to_modal_.py  7fcd1f0f86cc_add_hardware_spec_to_modal_functions.py  8436147ae70a_fix_container_uuid_uniqueness.py  84833e6b7062_revise_modal_app_and_function_models.py  90d3af5c19d3_autoincrement_modal_model_ids.py  92f6722af9e5_create_mdf_datasets_table.py  (+16 more)
garden-backend-service/scripts/: search_benchmark.py  search_benchmark_async.py
garden-backend-service/src/: config.py  main.py
garden-backend-service/tests/: README.md  conftest.py  test_routes.py  utils.py
(+186 files in other folders)
